<resources>
    <string name="app_name">smartlocker</string>
    <string name="inicio_visitante"><u>Acessar como visitante</u></string>
    <string name="cadastro_tenhoOutraConta"><u>Tenho uma conta</u></string>
    <string name="cadastro_campos">Preencha <b><u>todos</u></b> os campos</string>
    <string name="recuperar_campoEmail">Digite o <b><u>email</u></b> utilizado no cadastro para recuperar sua senha</string>
    <string name="recuperar_voltarLogin"><u>Voltar para Login</u></string>
    <string name="recuperar_voltarCadastro"><u>Voltar para Cadastro</u></string>
    <string name="spinner_hint">Selecione uma opção</string>
    <string name="value_per_hour">Valores por hora</string>
    <string name="info_warning">Atenção</string>
    <string name="info_warning_text">Ao alugar o espaço, será cobrado o valor de uma diária como forma de caução. A diferença será estornada na hora do checkout. A opção de diária poderá ser selecionada somente entre 7h e 8h da manhã.</string>
    <string name="back"><u>Voltar</u></string>
    <string name="cancelar_cartao"><u>Cancelar</u></string>
    <string name="recover_title"><b>Digite o código</b></string>
    <string name="recover_text">Enviamos para seu <b><u>email</u></b> um código de recuperação de conta </string>
    <string name="recover_resend"><u>Não recebi código</u></string>
    <string name="cadastro_cartao">Para terminar a compra, preencha <b><u>todos</u></b> os campos</string>


    <string-array name="spinner_opcoes_valores_string">
        <item>Selecione a opção</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>4 horas</item>
        <item>Diária</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>