<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        style="@style/subTitle"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:text="@string/recover_text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:layout_editor_absoluteY="256dp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/recover_title"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView3"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/recuperar_editTextEmail"
        style="@style/InputFormStyle"
        android:layout_width="274dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:hint="Código enviado"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
        tools:layout_editor_absoluteX="68dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        style="@style/btnPrimary"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:text="Recuperar senha"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView4"
        tools:layout_editor_absoluteX="68dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        style="@style/btnHyperLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/recuperar_voltarLogin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:layout_editor_absoluteY="481dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        style="@style/btnHyperLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/recover_resend"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteY="481dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="main" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>